# Dyson.ai

./: .gitignore  CLAUDE.md  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  commitlint.config.js  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/python/: .dockerignore  .env.example  pyproject.toml  pytest.ini  requirements.txt
backend/python/agent_runtime/: config.py  main.py
backend/python/agent_runtime/agents/: __init__.py  conflict_detection.py  digest.py  knowledge_health.py  orchestrator.py  postmortem.py  pr_review.py  pre_meeting_brief.py  relationship_inference.py
backend/python/agent_runtime/ml/: embeddings.py
backend/python/agent_runtime/routers/: agents.py  health.py
backend/python/agent_runtime/schemas/: __init__.py  agents.py
backend/python/agent_runtime/tools/: __init__.py  dyson_client.py
backend/python/tests/: conftest.py  test_api.py  test_schemas.py
backend/src/: app.ts  server.ts
backend/src/config/: constants.ts  env.ts
backend/src/infra/: agent-runtime-client.ts  cache.ts  circuit-breaker.ts  email.ts  github-app.ts  query-cache.ts  redis.ts  retry.ts  (+2 more)
backend/tests/: setup.ts
docs/: DEPLOYMENT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
landing/: index.html
python/: Dockerfile  README.md
python/agent_runtime/: __init__.py
python/tests/: test_ml.py
(+179 files in other folders)
