[project]
name            = "dyson-agent-runtime"
version         = "0.1.0"
description     = "Python agent runtime for Dyson — LangGraph agents + ML pipelines"
requires-python = ">=3.12"

dependencies = [
  # Web framework
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",

  # HTTP client
  "httpx==0.28.1",

  # Agent orchestration
  "langgraph==0.2.55",
  "langchain==0.3.9",
  "langchain-core==0.3.21",
  "langchain-google-genai==2.0.7",
  "langchain-openai==0.2.11",

  # ML / NLP
  "sentence-transformers==3.3.1",
  "spacy==3.8.3",
  "numpy==2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]
